hello-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb 
  labels:
    app: helloweb 
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: helloweb 
      version: v1
  template:
    metadata:
      labels:
        app: helloweb 
        version: v1
    spec:
      containers:
        - image: learnistio/hello-web:1.0.0
          imagePullPolicy: Always
          name: web 
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: helloweb 
  labels:
    app: helloweb 
spec:
  selector:
    app: helloweb 
  ports:
    - port: 3000
      name: http
