vs-redirect.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greeter-service
spec:
  hosts:
    - greeter-service.default.svc.cluster.local
  http:
    - match:
      - uri:
          prefix: /greeting
      redirect:
        uri: /hello
        authority: greeter-service.default.svc.cluster.local:3000
    - route:
      - destination:
          host: greeter-service.default.svc.cluster.local
          port:
            number: 3000
